--- a/styles/styles.css
+++ b/styles/styles.css
@@ -484,3 +484,16 @@ footer {
 .meta-card:hover {
   transform: translateY(-5px);
 }
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo img {
+  height: 50px;
+  width: 50px;
+  margin-right: 10px;
+  border-radius: 10px;
+  object-fit: cover;
+}
