--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,7 +168,10 @@ body {
   max-width: 1200px;
   margin: 20px auto;
   padding: 20px;
-  background-image: linear-gradient(rgba(25,42,86,0.85), rgba(13,20,40,0.85)), url('images/background.jpg');
+  background-color: rgba(25,42,86,0.3);
+  background-image: 
+    linear-gradient(rgba(25,42,86,0.85), rgba(13,20,40,0.85)), 
+    url('../images/background.jpg');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
